[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nage"
version = "0.2.0"
description = "Nage AI Python SDK — KLM-native client for source-attributed intelligence"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Omer Asim", email = "one@nage.ai"}]
keywords = ["llm", "ai", "knowledge", "varve", "sedim", "nage", "stemma"]

[project.scripts]
nage = "nage.cli.main:main"

[project.optional-dependencies]
async = ["aiohttp>=3.9.0"]

[project.urls]
Homepage = "https://nage.ai"
Documentation = "https://nage.ai/platform"
Repository = "https://github.com/NageAI/nage-sdk"

[tool.setuptools.packages.find]
where = ["."]
include = ["nage*"]
